Add paper short-run pain long-run gain

--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
 
             <div class="container">
                 <div class="paper">
+                    <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
+
+                    <ul>
+
+                        <li class="journal">prepared for the <a target="_blank" href="https://tepper.cmu.edu/sitecore/content/tepper/extranet/our-faculty-and-research/seminars-and-conferences/carnegie-rochester-nyu-conference/program-schedule">Carnegie Rochester NYU conference on public policy</a></li> 
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
+                            <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="SRpainLRgain" class="panel-collapse collapse">
+                            <div class="panel-body">Recent empirical evidence suggests that skill-biased technological change that shifts labor demand towards non-routine jobs has accelerated during the Great Recession. We analyze the interaction between the gradual process of transition towards a skill intensive technology and business cycles in a standard neoclassical growth framework. In the model, periods of depressed economic activity are used by firms to deeply reorganize production and by routine workers to acquire new skills due to low opportunity costs. As a result, additional resources are diverted from production, amplifying the effect of a negative TFP shock. At the same time, recessions speed up technological transformation. For a reasonable parametrization, the model is able to match both the long-run trend in the routine employment share and the dramatic impact of the Great Recession on such jobs.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container">
+                <div class="paper">
                     <h4 class="title">The Union Threat</h4>
 
                     <ul>
@@ -149,7 +171,7 @@
 
                     <div class="panel panel-transparent">
                         <div id="UnionThreat" class="panel-collapse collapse">
-                            <div class="panel-body">We develop a quantitative theory of business cycles with coordination failures. Because of demand complementarities, firms seek to coordinate production and multiple equilibria arise. We use a global game approach to discipline equilibrium selection and show that the unique equilibrium exhibits two steady states. Coordination on high production may fail after a large transitory shock, pushing the economy in a quasi-permanent recession. Our calibrated model rationalizes various features of the Great Recession. Government spending, while generally harmful, can increase welfare when the economy is transitioning between steady states. Simple subsidies implement the efficient allocation.</div>
+                            <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election. As unionized workers bargain collectively with the firm, unionization compresses the wage distribution and lowers profits. To prevent unionization, nonunion firms distort the skill composition of their workforce by over-hiring high-skill workers, who vote against the union, and under-hiring low-skill workers, who vote in its favor. Because of decreasing returns to labor, this change in hiring lowers output while reducing the range of wages paid. In the calibrated economy, removing the threat of unionization, by freezing the union status of firms, reduces unemployment and increases output and the variance of wages. Removing, in addition, all unions from the economy leads to a larger increase in wage inequality but does not further affect output and unemployment. These results suggest that the threat that unionization exerts on nonunion firms, more than the fact that some firms are actually unionized, is the main channel through which unions affect output and unemployment in the U.S. economy.</div>
                         </div>
                     </div>
                 </div>
