Add paper short-run pain long-run gain (bis)

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
 
                     <ul>
-
-                        <li class="journal">prepared for the <a target="_blank" href="https://tepper.cmu.edu/sitecore/content/tepper/extranet/our-faculty-and-research/seminars-and-conferences/carnegie-rochester-nyu-conference/program-schedule">Carnegie Rochester NYU conference on public policy</a></li> 
+                        <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
+                        <li class="journal">prepared for the <b>Carnegie Rochester NYU conference on public policy</b></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
                             <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
