--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professor of Economics, Cornell University">
 <meta name="author" content="Mathieu Taschereau-Dumouchel">
-<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Cornell,Macroeconomics,Economics,Uncertainty,Coordination,Traps,Union,Threat,Network">
+<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Cornell,macroeconomics,economics,uncertainty,coordination,traps,union,threat,network,endogenous">
 
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <!-- <link rel="icon" href="img/favicon.ico"> -->
@@ -134,6 +134,28 @@
 
         <div class="papers">
 
+          <div class="container">
+              <div class="paper">
+                  <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
+                  <ul>
+
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#Network">(abstract)</a>
+                          <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
+                          <a target="_blank" href="files/papers/Network/first_version.pdf">(first version)</a>
+                      </li>
+                  </ul>
+
+
+                  <div class="panel panel-transparent">
+                      <div id="Network" class="panel-collapse collapse">
+                          <div class="panel-body">This paper proposes a simple theory of production in which the network of input-output linkages is endogenously determined by the decision of the firms to operate or not. Since producers benefit from having multiple suppliers, the economy features complementarities between the operating decisions of nearby firms. As a result, tightly connected clusters of producers emerge around productive firms. In addition, after a firm is hit by a severe shock, a cascade of shutdowns might spread from neighbor to neighbor as the network reorganizes itself. While well-connected firms are better able to withstand shocks, they trigger larger cascades upon shut down, a prediction confirmed by U.S. data. The theory also predicts how the shape of the network interacts with the business cycle. As in the data, periods of low economic activity feature less clustering among firms, and are associated with thinner tails for the degree distributions. Finally, allowing the network to reorganize itself in response to idiosyncratic shocks leads to substantially smaller variations in aggregate output, suggesting that endogenous changes in the shape of the production network have a significant impact on the aggregation of microeconomic shocks into macroeconomic fluctuations.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+
             <div class="container">
                 <div class="paper">
                     <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
@@ -177,26 +199,6 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
-                    <ul>
-
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#Network">(abstract)</a>
-                            <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
-                            <a target="_blank" href="files/papers/Network/slides.pdf">(slides)</a>
-                        </li>
-                    </ul>
-
-
-                    <div class="panel panel-transparent">
-                        <div id="Network" class="panel-collapse collapse">
-                            <div class="panel-body">This paper proposes a simple theory of production in which the network of input-output linkages is endogenously determined by the firms' decisions to operate. Since producers benefit from having multiple suppliers, the economy features complementarities between the operating decisions of nearby firms. As a result, tightly connected clusters of producers emerge around productive firms. In addition, after a firm is hit by a severe shock, a cascade of shutdowns might spread from neighbor to neighbor as the network reorganizes itself. While well-connected firms are better able to withstand shocks, they trigger larger cascades upon shut down. The theory also predicts how the shape of the network interacts with the business cycle. As in the U.S. data, periods of low economic activity feature fewer well-connected producers and less clustering among firms. Once calibrated, the model predicts that allowing the network to reorganize itself in response to shocks leads to substantially smaller variations in aggregate output, suggesting that endogenous changes in the shape of the production network have a significant impact on the aggregation of microeconomic shocks into macroeconomic fluctuations.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
 
@@ -394,6 +396,15 @@
 
 
         <div class="courses">
+
+          <div class="container">
+              <div class="course">
+                  <h4 class="title"> ECON 3040 - Intermediate Macroeconomic Theory</h4>
+                  <ul>
+                      <li class="subtitle">Cornell Undergraduates, Spring 2018</li>
+                  </ul>
+              </div>
+          </div>
 
             <div class="container">
                 <div class="course">
