--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
                         <ul>
                             <li><span class="glyphicon glyphicon-user"></span> <a class="cv" target="_blank" href="files/cv.pdf">Curriculum Vitae</a></li>
-                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mathtd@cornell.edu">mathtd@cornell.edu</a></li>
-                            <li><span class="glyphicon glyphicon-globe"></span> 480 Uris Hall, Cornell University, Ithaca NY 14853</li>
+                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" target="_blank" href="mailto:mathtd@cornell.edu">mathtd@cornell.edu</a></li>
+                            <li><span class="glyphicon glyphicon-globe"></span><a class="cv" target="_blank" href="https://goo.gl/maps/3RFiav3NueM2"> 480 Uris Hall, Cornell University, Ithaca NY 14853</a></li>
                         </ul>
                     </div>
                     <div class="col-md-1 hidden-sm hidden-xs">
@@ -157,26 +157,6 @@
           </div>
 
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
-
-                    <ul>
-                        <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal">prepared for the <b>Carnegie Rochester NYU conference on public policy</b></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
-                            <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="SRpainLRgain" class="panel-collapse collapse">
-                            <div class="panel-body">Recent empirical evidence suggests that skill-biased technological change the associated phenomenon of job polarization accelerated during the Great Recession. We use a standard neoclassical growth framework to analyze how business cycle fluctuations interact with the long-run transition towards a skill-intensive technology. In the model, since adopting the new technology disrupts production, firms prefer to do so in recessions, when profits are low. Similarly, workers also tend to learn new skills during downturns. As a result, recessions are deeper during periods of technological transition, but they also speed up adoption of the new technology. We document evidence for these mechanisms in the data. Our calibrated model is able to match both the long-run downward trend in routine employment and the dramatic impact of the Great Recession. We also show that even in the absence of the Great Recession routine employment share would have reached the observed level by the year 2012.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
             <div class="container">
@@ -185,7 +165,7 @@
 
                     <ul>
 
-                        <li class="journal">revise and resubmit at the <B>Review of Economic Studies</B></li>
+                        <li class="journal"><B>Review of Economic Studies</B>, revise and resubmit</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
                             <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
@@ -295,7 +275,7 @@
         <a class="anchor" id="publications"></a>
         <div class="main_title">
             <div class="container">
-                <h3>Publication</h3>
+                <h3>Publication and Accepted Papers</h3>
             </div>
         </div>
 
@@ -303,11 +283,32 @@
 
             <div class="container">
                 <div class="paper">
+                    <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
+
+                    <ul>
+                        <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
+                        <li class="journal"><b>Journal of Monetary Economics</b> (Carnegie-Rochester-NYU Series), accepted </li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
+                            <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="SRpainLRgain" class="panel-collapse collapse">
+                            <div class="panel-body">Recent empirical evidence suggests that skill-biased technological change accelerated during the Great Recession. We use a neoclassical growth framework to analyze how business cycle fluctuations interact with a long-run transition towards a skill-intensive technology. In the model, the adoption of new technologies by firms and the acquisition of new skills by workers are concentrated in downturns due to low opportunity costs. As a result, shocks lead to deeper recessions, but they also speed up the adoption of the new technology. Our calibrated model matches both the long-run downward trend in routine employment as well as features of the Great Recession.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="paper">
                     <h4 class="title">Uncertainty Traps</h4>
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="journal"><B>The Quarterly Journal of Economics</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
+                        <li class="journal"><B>Quarterly Journal of Economics</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
