--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="paper">
                   <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
                   <ul>
-
+                      <li class="journal"><B>Econometrica</B>, revise and resubmit</li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#Network">(abstract)</a>
                           <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
