--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <a class="anchor" id="publications"></a>
         <div class="main_title">
             <div class="container">
-                <h3>Publication and Accepted Papers</h3>
+                <h3>Publications and Accepted Papers</h3>
             </div>
         </div>
 
@@ -287,7 +287,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal"><b>Journal of Monetary Economics</b> (Carnegie-Rochester-NYU Series), accepted </li>
+                        <li class="journal"><b>Journal of Monetary Economics</b> (Carnegie-Rochester-NYU Series), forthcoming </li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
                             <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
