--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal"><b>Journal of Monetary Economics</b> (Carnegie-Rochester-NYU Series), forthcoming </li>
+                        <li class="journal"><B>Journal of Monetary Economics</B> (Carnegie-Rochester-NYU Series), Volume 97, August 2018, Pages 29–44</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
                             <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
@@ -296,7 +296,7 @@
 
                     <div class="panel panel-transparent">
                         <div id="SRpainLRgain" class="panel-collapse collapse">
-                            <div class="panel-body">Recent empirical evidence suggests that skill-biased technological change accelerated during the Great Recession. We use a neoclassical growth framework to analyze how business cycle fluctuations interact with a long-run transition towards a skill-intensive technology. In the model, the adoption of new technologies by firms and the acquisition of new skills by workers are concentrated in downturns due to low opportunity costs. As a result, shocks lead to deeper recessions, but they also speed up the adoption of the new technology. Our calibrated model matches both the long-run downward trend in routine employment as well as features of the Great Recession.</div>
+                            <div class="panel-body">Recent empirical evidence suggests that skill-biased technological change accelerated during the Great Recession. We use a neoclassical growth framework to analyze how business cycle fluctuations interact with a long-run transition towards a skill-intensive technology. In the model, the adoption of new technologies by firms and the acquisition of new skills by workers are concentrated in downturns due to low opportunity costs. As a result, shocks lead to deeper recessions, but they also speed up adoption of the new technology. Our calibrated model matches both the long-run downward trend in routine employment and key features of the Great Recession.</div>
                         </div>
                     </div>
                 </div>
