--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <h2 class="name">Mathieu Taschereau-Dumouchel</h2>
                         <ul>
                             <li>Assistant Professor of Economics</li>
-                            <li>Jain Faculty Fellow</li>
+                            <li>Robert Jain Faculty Fellow</li>
                         </ul>
                         <!-- <h3>Research Interests</h3> -->
                         <span class="interests"><p>Macroeconomics, Labor Economics, Networks</p></span>
