--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
 
         <div class="papers">
 
+
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">The Union Threat</h4>
+
+                    <ul>
+
+                        <li class="journal"><B>Review of Economic Studies</B>, revise and resubmit</li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
+                            <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="UnionThreat" class="panel-collapse collapse">
+                            <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election within firms. As union wages are set through a collective bargaining process, unionization compresses wages and lowers profits. To prevent unionization, nonunion firms over-hire high-skill workers—who vote against the union—and under-hire low-skill workers—who vote in its favor. As a consequence of this distortion in hiring, firms that are threatened by unionization hire fewer workers, produce less and pay a more concentrated distribution of wages. In the calibrated economy, the threat of unionization has a significant negative impact on aggregate output, but it also reduces wage inequality.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
           <div class="container">
               <div class="paper">
                   <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
@@ -156,30 +180,6 @@
                   </div>
               </div>
           </div>
-
-
-
-
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">The Union Threat</h4>
-
-                    <ul>
-
-                        <li class="journal"><B>Review of Economic Studies</B>, revise and resubmit</li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
-                            <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="UnionThreat" class="panel-collapse collapse">
-                            <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election. As unionized workers bargain collectively with the firm, unionization compresses the wage distribution and lowers profits. To prevent unionization, nonunion firms distort the skill composition of their workforce by over-hiring high-skill workers, who vote against the union, and under-hiring low-skill workers, who vote in its favor. Because of decreasing returns to labor, this change in hiring lowers output while reducing the range of wages paid. In the calibrated economy, removing the threat of unionization, by freezing the union status of firms, reduces unemployment and increases output and the variance of wages. Removing, in addition, all unions from the economy leads to a larger increase in wage inequality but does not further affect output and unemployment. These results suggest that the threat that unionization exerts on nonunion firms, more than the fact that some firms are actually unionized, is the main channel through which unions affect output and unemployment in the U.S. economy.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
 
