--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
 
           <div class="container">
               <div class="paper">
+                  <h4 class="title">The Union Threat</h4>
+
+                  <ul>
+
+                      <li class="journal"><B>Review of Economic Studies</B>, conditionally accepeted</li>
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
+                          <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
+                      </li>
+                  </ul>
+
+                  <div class="panel panel-transparent">
+                      <div id="UnionThreat" class="panel-collapse collapse">
+                          <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election within firms. As union wages are set through a collective bargaining process, unionization compresses wages and lowers profits. To prevent unionization, nonunion firms over-hire high-skill workers—who vote against the union—and under-hire low-skill workers—who vote in its favor. As a consequence of this distortion in  hiring, firms that are threatened by unionization hire fewer workers, produce less and pay a more concentrated distribution of wages. In the calibrated economy, the threat of unionization has a significant negative impact on aggregate output, but it also reduces wage inequality.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+
+          <div class="container">
+              <div class="paper">
                   <h4 class="title">Herding Cycles</h4>
 
 
@@ -156,28 +178,6 @@
           </div>
 
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">The Union Threat</h4>
-
-                    <ul>
-
-                        <li class="journal"><B>Review of Economic Studies</B>, conditionally accepeted</li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
-                            <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="UnionThreat" class="panel-collapse collapse">
-                            <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election within firms. As union wages are set through a collective bargaining process, unionization compresses wages and lowers profits. To prevent unionization, nonunion firms over-hire high-skill workers—who vote against the union—and under-hire low-skill workers—who vote in its favor. As a consequence of this distortion in hiring, firms that are threatened by unionization hire fewer workers, produce less and pay a more concentrated distribution of wages. In the calibrated economy, the threat of unionization has a significant negative impact on aggregate output, but it also reduces wage inequality.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
 
           <div class="container">
               <div class="paper">
@@ -188,14 +188,13 @@
                           <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
                           <a target="_blank" href="files/papers/Network/slides.pdf">(slides)</a>
                           <a target="_blank" href="files/papers/Network/first_version.pdf">(first version)</a>
-                          <a target="_blank" href="files/papers/Network/longer_version.pdf">(longer earlier version)</a>
                       </li>
                   </ul>
 
 
                   <div class="panel panel-transparent">
                       <div id="Network" class="panel-collapse collapse">
-                          <div class="panel-body">This paper studies an economy in which the production network is endogenously determined by the firms’ extensive margin of production. Because of the presence of fixed costs, a firm might decide not to produce, thereby severing connections with potential suppliers and customers. Every stable equilibrium in this economy can be characterized as the solution to a social planner’s problem. But because of the discrete decisions involved in the formation of the network, standard optimization techniques can take an infeasibly long time to find a solution. To overcome this issue, I propose a novel solution method that involves reshaping the planner’s problem. Analytic results and numerical simulations show that the method rapidly finds the planner’s solution in a class of economies that were considered particularly challenging. To illustrate how this approach works in practice, I show that a basic calibration of the model can capture how the U.S. production network changes over the business cycle. The calibrated model also features cascades of firm shutdowns that resemble those observed in the data. In addition, I find that the endogenous reorganization of the network leads to substantially smaller variations in aggregate output.</div>
+                          <div class="panel-body">This paper studies an economy in which the network structure of production is endogenously determined by the firms’ extensive margin of operation. In the model, a finite number of firms are connected through input-output linkages and must pay a fixed cost to produce. When economic conditions are poor, some firms might decide not to produce, thereby severing the links with their neighbors. Together, the operating decisions of the firms therefore determine the structure of the production network. Since producers benefit from having access to additional suppliers, the economy features complementarities between the operating decisions of nearby firms. As a result, if a firm exits following a severe shock, a cascade of shutdowns might spread from neighbor to neighbor as the network reorganizes itself. While well-connected firms are better able to withstand shocks, they trigger larger cascades upon shutdown, a prediction confirmed by U.S. data. The theory also predicts how the structure of the production network interacts with the business cycle. As in the data, downturns feature less clustering among firms, and are associated with degree distributions with thinner tails. In addition, the endogenous reorganization of the network substantially dampens aggregate fluctuations relative to a scenario in which the network is kept fixed.</div>
                       </div>
                   </div>
               </div>
@@ -307,7 +306,7 @@
                     <h4 class="title">Short-Run Pain, Long-Run Gain? Recessions and Technological Transformation</h4>
 
                     <ul>
-                        <li class="co-authors">with <a  target="_blank" href="https://fnce.wharton.upenn.edu/profile/akopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
+                        <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
                         <li class="journal"><B>Journal of Monetary Economics</B> (Carnegie-Rochester-NYU Series), Volume 97, August 2018, Pages 29–44</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
@@ -359,12 +358,20 @@
 
         <div class="papers">
 
+          <div class="container">
+              <div class="discussion">
+                  <h4 class="title">The Transmission of Shocks in Endogenous Financial Networks: A Structural Approach</h4>
+                  <ul>
+                      <li class="co-authors">by Jonas Heipertz, Amine Ouazad and Romain Rancière, February 2020, <a target="_blank" href="files/discussions/2020_02_Heipertz_Ouazad_Ranciere.pdf">(slides)</a></li>
+                  </ul>
+              </div>
+          </div>
+
             <div class="container">
                 <div class="discussion">
                     <h4 class="title">Discount Rates and Employment Fluctuations</h4>
                     <ul>
                         <li class="co-authors">by Jaroslav Borovicka and Katarina Borovickova, June 2016, <a target="_blank" href="files/discussions/2016_06_Borovicka_Borovickova.pdf">(slides)</a></li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
                 </div>
             </div>
@@ -374,7 +381,6 @@
                     <h4 class="title">A Model of the Reserve Asset</h4>
                     <ul>
                         <li class="co-authors">by Zhiguo He, Arvind Krishnamurthy and Konstantin Milbradt, January 2016, <a target="_blank" href="files/discussions/2016_01_He_Krishnamurthy_Milbradt.pdf">(slides)</a></li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
                 </div>
             </div>
@@ -384,7 +390,6 @@
                     <h4 class="title">Uncertainty, Wages, and the Business Cycle</h4>
                     <ul>
                         <li class="co-authors">by Matteo Cacciatore and Federico Ravenna, November 2015, <a target="_blank" href="files/discussions/2015_11_CacciatoreRavenna.pdf">(slides)</a></li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
                 </div>
             </div>
@@ -394,7 +399,6 @@
                     <h4 class="title">Who Do Unions Target? Unionization Over the Life-Cycle of U.S. Businesses</h4>
                     <ul>
                         <li class="co-authors">by Emin Dinlersoz, Jeremy Greenwood and Henry Hyatt, January 2015, <a target="_blank" href="files/discussions/2015_01_DinlersozGreenwoodHyatt.pdf">(slides)</a></li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
                 </div>
             </div>
@@ -404,7 +408,6 @@
                     <h4 class="title">Default Risk and Aggregate Fluctuations in an Economy with Production Heterogeneity</h4>
                     <ul>
                         <li class="co-authors">by Aubhik Khan, Tatsuro Senga and Julia K. Thomas, June 2014, <a target="_blank" href="files/discussions/2014_06_KhanSengaThomas.pdf">(slides)</a></li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
                 </div>
             </div>
@@ -461,7 +464,7 @@
                     <h4 class="title"> FNCE 101 - Monetary Economics and the Global Economy</h4>
                     <ul>
                         <li class="subtitle">Wharton Undergraduates, Spring 2013 and 2014</li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
+
                     </ul>
                 </div>
             </div>
