--- a/index.html
+++ b/index.html
@@ -134,27 +134,6 @@
 
         <div class="papers">
 
-          <div class="container">
-              <div class="paper">
-                  <h4 class="title">The Union Threat</h4>
-
-                  <ul>
-
-                      <li class="journal"><B>Review of Economic Studies</B>, conditionally accepeted</li>
-                      <li class="after-title">
-                          <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
-                          <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
-                      </li>
-                  </ul>
-
-                  <div class="panel panel-transparent">
-                      <div id="UnionThreat" class="panel-collapse collapse">
-                          <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election within firms. As union wages are set through a collective bargaining process, unionization compresses wages and lowers profits. To prevent unionization, nonunion firms over-hire high-skill workers—who vote against the union—and under-hire low-skill workers—who vote in its favor. As a consequence of this distortion in  hiring, firms that are threatened by unionization hire fewer workers, produce less and pay a more concentrated distribution of wages. In the calibrated economy, the threat of unionization has a significant negative impact on aggregate output, but it also reduces wage inequality.</div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-
 
           <div class="container">
               <div class="paper">
@@ -300,6 +279,26 @@
         </div>
 
         <div class="papers">
+
+          <div class="container">
+              <div class="paper">
+                  <h4 class="title">The Union Threat</h4>
+
+                  <ul>
+                      <li class="journal"><B>Review of Economic Studies</B>, accepted for publication</li>
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
+                          <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
+                      </li>
+                  </ul>
+
+                  <div class="panel panel-transparent">
+                      <div id="UnionThreat" class="panel-collapse collapse">
+                          <div class="panel-body">This paper develops a search theory of labor unions in which the possibility of unionization distorts the behavior of nonunion firms. In the model, unions arise endogenously through a majority election within firms. As union wages are set through a collective bargaining process, unionization compresses wages and lowers profits. To prevent unionization, nonunion firms over-hire high-skill workers—who vote against the union—and under-hire low-skill workers—who vote in its favor. As a consequence of this distortion in  hiring, firms that are threatened by unionization hire fewer workers, produce less and pay a more concentrated distribution of wages. In the calibrated economy, the threat of unionization has a significant negative impact on aggregate output, but it also reduces wage inequality.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
 
             <div class="container">
                 <div class="paper">
