--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <a class="anchor" id="publications"></a>
         <div class="main_title">
             <div class="container">
-                <h3>Publications and Accepted Papers</h3>
+                <h3>Published and Accepted Papers</h3>
             </div>
         </div>
 
