--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                           <a data-toggle="collapse" href="#Network">(abstract)</a>
                           <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
                           <a target="_blank" href="files/papers/Network/slides.pdf">(slides)</a>
+                          <a target="_blank" href="files/papers/Network/replication.zip">(replication files)</a>
                           <a target="_blank" href="files/papers/Network/first_version.pdf">(first version)</a>
                       </li>
                   </ul>
