--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                       <li class="after-title">
                           <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
                           <a target="_blank" href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
+                          <a target="_blank" href="files/papers/HerdingCycles/slides.pdf">(slides)</a>
                       </li>
                   </ul>
 
