--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <h4 class="title">The Union Threat</h4>
 
                   <ul>
-                      <li class="journal"><B>Review of Economic Studies</B>, accepted for publication</li>
+                      <li class="journal"><B>Review of Economic Studies</B>, forthcoming</li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
                           <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
