--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <div class="course">
                   <h4 class="title"> ECON 3040 - Intermediate Macroeconomic Theory</h4>
                   <ul>
-                      <li class="subtitle">Cornell Undergraduates, Spring 2018</li>
+                      <li class="subtitle">Cornell Undergraduates, 2018 - present</li>
                   </ul>
               </div>
           </div>
@@ -437,7 +437,7 @@
                 <div class="course">
                     <h4 class="title"> ECON 6130 - Macroeconomics</h4>
                     <ul>
-                        <li class="subtitle">Cornell PhD, Fall 2017</li>
+                        <li class="subtitle">Cornell PhD, 2017 - present</li>
                     </ul>
                 </div>
             </div>
@@ -446,7 +446,7 @@
                 <div class="course">
                     <h4 class="title"> FNCE 613 - Macroeconomics and the Global Economic Environment</h4>
                     <ul>
-                        <li class="subtitle">Wharton MBA, Spring 2016 and 2017</li>
+                        <li class="subtitle">Wharton MBA, 2016 and 2017</li>
                     </ul>
                 </div>
             </div>
@@ -455,7 +455,7 @@
                 <div class="course">
                     <h4 class="title"> FNCE 924 - Macroeconomics</h4>
                     <ul>
-                        <li class="subtitle">Wharton PhD, Spring 2012, 2013 and 2014</li>
+                        <li class="subtitle">Wharton PhD, 2012 to 2014</li>
                     </ul>
                 </div>
             </div>
@@ -464,7 +464,7 @@
                 <div class="course">
                     <h4 class="title"> FNCE 101 - Monetary Economics and the Global Economy</h4>
                     <ul>
-                        <li class="subtitle">Wharton Undergraduates, Spring 2013 and 2014</li>
+                        <li class="subtitle">Wharton Undergraduates, 2013 and 2014</li>
 
                     </ul>
                 </div>
