--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
-                            <a target="_blank" href="http://quant-econ.net/jl/uncertainty_traps.html">(exercise at quant econ)</a>
+                            <a target="_blank" href="https://julia.quantecon.org/multi_agent_models/uncertainty_traps.html">(exercise at quant econ)</a>
                         </li>
                     </ul>
 
